--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "dependencies": {
     "@azure/cosmos": "^3.6.3",
     "bcrypt": "^4.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "generate-password": "^1.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
